# About-me

./: Cargo.toml  README.md
backend/: Cargo.toml  README.md
backend/src/: charity.rs  error.rs  main.rs  projects.rs  social_buttons.rs
frontend/: Cargo.toml  README.md  index.html
frontend/assets/: style.css  vars.css
frontend/src/: main.rs
frontend/static/: style.css
src/: lib.rs
