[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
about-me = { path = ".." }

actix-web = "4.3.1"
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "sqlite" ] }

thiserror = "1.0.40"
log = "0.4.17"
env_logger = "0.10.0"
actix-files = "0.6.2"
