[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
about-me = { path = "../" }
gloo-net = "0.2.6"
wasm-bindgen-futures = "0.4.34"
wasm-logger = "0.2.0"
tokio = "1.26.0"
yew = { version = "0.20.0", features = ["csr"] }
gloo-console = "0.2.3"
wasm-bindgen = "0.2.84"
yew-router = "0.17.0"
